[tool.poetry]
name = "ai-blogger"
version = "0.1.0"
description = ""
authors = ["ikuo-suyama <13306175+ikuo-suyama@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ai_blogger"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
