[tool.poetry]
name = "ai-blogger"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "ai_blogger"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
